Fix icon alignment

--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -214,7 +214,7 @@
         width: 48%;
       }
 
-      p {          
+      p {
         max-width: 360px;
         margin: 0 auto;
       }
@@ -272,6 +272,7 @@
 
       .img-container {
         margin: auto;
+        text-align: center;
         margin-bottom: 1rem;
         height: 45px;
       }
@@ -292,7 +293,8 @@
           text-align: left;
         }
 
-        img {
+        .img-container {
+          text-align: left;
           margin: 0 0 1rem 0;
         }
       }
